--- a/backjs/maths.html
+++ b/backjs/maths.html
@@ -16,8 +16,9 @@
     }
      
     // Calling function
-    showFullname("Catherin", "Phiri"); // Prints: Clark Kent
+    showFullname("Catherine","|", "Phiri"); // Prints: Clark Kent
     document.write("<br>");
+    showFullname("Nchena","|"); // Prints: John undefined
     showFullname("Nchena"); // Prints: John undefined
 
     // ANGULAR & PURESTORAGE 2020 WORKSPACE#2
