--- a/backjs/maths.html
+++ b/backjs/maths.html
@@ -16,7 +16,7 @@
     }
      
     // Calling function
-    showFullname("Catherine","|", "Phiri"); // Prints: Clark Kent
+    showFullname("Catherine","|", "Phiri"); // Prints: CP
     document.write("<br>");
     showFullname("Nchena","|"); // Prints: John undefined
     showFullname("Nchena"); // Prints: John undefined
