--- a/backjs/maths.html
+++ b/backjs/maths.html
@@ -38,6 +38,19 @@ let zam2=zam1();
 console.log(zam2+"FunctionTrue2");
 // Calling function #4: Calling an Empty functions/ Occupied function
 ///===============================================================3 ///
+
+//var arr = [[1, 5],[7, 4]];
+let mav=function printArray(arr) {
+    var arr = [1,5,7,8,9,90,77,33,4];
+    for (var i = 0; i < arr.length; i++)
+    if(arr[i]==77){return true;}
+        if (Array.isArray(arr[i]))
+            printArray(arr[i])
+        else
+            console.log(arr[i])
+}
+let mav2=mav();
+console.log(mav2)
 // ANGULAR & PURESTORAGE 2020 WORKSPACE#2
     </script>
 </body>
