--- a/backjs/maths.html
+++ b/backjs/maths.html
@@ -16,7 +16,7 @@
 
 ///===============================================================1 ///
   function logTheyName(nameX) {
-  console.log(nameX);
+  console.log(nameX+"|  SecondQ");
   document.write("<br>");
   document.write(nameX)
 }
@@ -48,6 +48,7 @@ for (var i = 0; i < h.length; ++i) {
         e.push(h[i]);
     } else {        o.push(h[i]);    }
 }
+console.log("| FOUR-QUESTION|")
 console.log(e);console.log(o);
 return o;
     }
@@ -59,7 +60,7 @@ console.log(mav4)
 
 ///=============================================================== 4 ///
 let mav5=function compare(a, b) {
-    console.log(97-84+"difference")
+    console.log(97-84+"Difference")
     if (a > b) {
         return -1;
     } else if (a < b) {
@@ -79,7 +80,7 @@ function getEvenNumbers(num) {
 
     var arr = [1, 2, 3, 4, 5, 6,8,88,78,80];
    let noreturn= arr.forEach(getEvenNumbers);
-   console.log(noreturn)
+   console.log(noreturn+"Doesnot returnAnything")
 
 // Calling function #6: Filter an Array even vs odd
 ///=============================================================== 6 ///
@@ -89,7 +90,8 @@ function divideNumbersThenStore(dividend, divisor){
     var arr = [dividend, divisor, quotient];    return arr;}
  
 // Store returned value 
-var all = divideNumbersThenStore(1997, 1984);   console.log(all)
+var all = divideNumbersThenStore(1997, 1984);   
+console.log(all+"| All three arguments including resultant")
 
 
 // Calling function #7: Create a block of numbes then return the block
