seven hackerthon questions

--- a/backjs/maths.html
+++ b/backjs/maths.html
@@ -16,7 +16,7 @@
 
 ///===============================================================1 ///
   function logTheyName(nameX) {
-  console.log(nameX+"|  SecondQ");
+  console.log(nameX+"|  Second QUESTION");
   document.write("<br>");
   document.write(nameX)
 }
@@ -48,8 +48,8 @@ for (var i = 0; i < h.length; ++i) {
         e.push(h[i]);
     } else {        o.push(h[i]);    }
 }
-console.log("| FOUR-QUESTION|")
-console.log(e);console.log(o);
+console.log("| Fourth-QUESTION|")
+console.log(e);
 return o;
     }
 
@@ -60,7 +60,7 @@ console.log(mav4)
 
 ///=============================================================== 4 ///
 let mav5=function compare(a, b) {
-    console.log(97-84+"Difference")
+    //console.log(97-84+" | Difference")
     if (a > b) {
         return -1;
     } else if (a < b) {
@@ -68,7 +68,8 @@ let mav5=function compare(a, b) {
     }
     return 0;
 }
-let mav6=mav5(84,97);   console.log(mav6)
+let mav6=mav5(84,97);   
+console.log(mav6)
 
 // Calling function #5: Filter an Array even vs odd
 
@@ -80,7 +81,7 @@ function getEvenNumbers(num) {
 
     var arr = [1, 2, 3, 4, 5, 6,8,88,78,80];
    let noreturn= arr.forEach(getEvenNumbers);
-   console.log(noreturn+"Doesnot returnAnything")
+   console.log(noreturn+" | Doesnot returnAnything")
 
 // Calling function #6: Filter an Array even vs odd
 ///=============================================================== 6 ///
@@ -92,6 +93,7 @@ function divideNumbersThenStore(dividend, divisor){
 // Store returned value 
 var all = divideNumbersThenStore(1997, 1984);   
 console.log(all+"| All three arguments including resultant")
+console.log(all)
 
 
 // Calling function #7: Create a block of numbes then return the block
