seven hackerthon questions

--- a/backjs/maths.html
+++ b/backjs/maths.html
@@ -56,7 +56,7 @@ let mav5=function compare(a, b) {
     return 0;
 }
 let mav6=mav5(84,97);   console.log(mav6)
-// Calling function #5: Filter an Array even vs odd
+// Calling function #5: Find Greater than or Less than
 
 ///===============================================================5 ///
 function getEvenNumbers(num) {
@@ -96,7 +96,6 @@ console.log(add(1, 2)); // 3
 console.log(add(1, 2, 3, 4, 5)); // 15
 console.log(simpleArraySum(1, 2)); // 3
 console.log(simpleArraySum(1, 2, 3, 4, 5)); // 15
-
 
 // Calling function #8: Create a block of numbes then return the block
 
@@ -152,8 +151,6 @@ console.log(findNumbers(3,7))
 // Calling function # 10: Create a block of numbes then return the block
 
 ///=============================================================== 10 ///
-
-
 // ANGULAR & PURESTORAGE 2020 WORKSPACE#2
     </script>
 </body>
