Question Ten  Hackerthon questions

--- a/backjs/maths.html
+++ b/backjs/maths.html
@@ -128,11 +128,11 @@ displayInformation();
 ///=============================================================== 8 ///
 
 function oddNumbers(int ,int )
-{var e=[];		var l=84,r=97;		//1
-for (var i=l; i<r+1;i++)		//2
-    if(([i]%2)==1) {e.push([i]); console.log("EvenNuberFound")}
+{var e=[];		var l=84,r=97;		
+for (var i=l; i<r+1;i++)		
+    if(([i]%2)==1) {e.push([i]);}
 return e;			}	//3
-console.log("==FIRST QUESTION==")
+console.log("x-QUESTION-NINE-x")
 console.log(oddNumbers(3,7))
 
 // Calling function #9: Create a block of numbes then return the block
@@ -146,7 +146,7 @@ if(arr[i]==k){return "YES"}
 for(let i=0;i< arr.length; i++)
 {return "NO"}
 }
-console.log("xxxxxxxxxxxxxxxx")
+console.log("x-QuestionTEN-x")
 console.log(findNumbers(3,7))
 // Calling function # 10: Create a block of numbes then return the block
 
